downgrade-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-obj-create
spec:
        #  selector: # Defines how the Deployment finds which Pods to manage.
        #matchLabels:
        #app: nginx # A label that is defined in the Pod template (app: nginx)
        #replicas: 3 # tells deployment to run 2 pods matching the template
        #template:
        #metadata:
        #labels:
        #app: nginx # The Pods are labeled 'app: nginx'
        #spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
