nginx-pod-update.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"what":"what"},"name":"nginx","namespace":"default"},"spec":{"containers":[{"image":"nginx:1.7.9","name":"nginx","ports":[{"containerPort":80}]}]}}
  creationTimestamp: "2019-10-30T21:55:03Z"
  labels:
    app: web_service
    importance: critical
    customer: internal_use
  name: nginx
  namespace: default
  resourceVersion: "299834"
  selfLink: /api/v1/namespaces/default/pods/nginx
  uid: 3619f319-997c-4b49-aef9-599a52369745
spec:
  containers:
  - image: nginx:1.7.9
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-ggn4z
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: k8s-659-node-01
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-ggn4z
    secret:
      defaultMode: 420
      secretName: default-token-ggn4z
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2019-10-30T21:55:03Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2019-10-30T21:55:34Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2019-10-30T21:55:34Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2019-10-30T21:55:04Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://18cd096ce81c1625f16e691a15c0b0be486dd778c9e40561faed047054d0be6c
    image: docker.io/library/nginx:1.7.9
    imageID: sha256:35d28df486f6150fa3174367499d1eb01f22f5a410afe4b9581ac0e0e58b3eaf
    lastState:
      terminated:
        containerID: containerd://b53f10c8c59efab25086fa6e8e0c69d4bcc18d0eabc701922b393eeffad766fd
        exitCode: 0
        finishedAt: "2019-10-30T21:55:32Z"
        reason: Completed
        startedAt: "2019-10-30T21:55:05Z"
    name: nginx
    ready: true
    restartCount: 1
    state:
      running:
        startedAt: "2019-10-30T21:55:33Z"
  hostIP: 10.1.57.176
  phase: Running
  podIP: 192.168.198.23
  qosClass: BestEffort
  startTime: "2019-10-30T21:55:03Z"
