nginx-test-daemonset.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-test
spec:
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - image: 127.0.0.1:30500/alta3/nginx_test
        name: nginx-test
