docker-private-registry.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: docker-private-registry
  name: docker-private-registry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-private-registry
  template:
    metadata:
      labels:
        app: docker-private-registry
    spec:
      containers:
      - image: registry:2
        imagePullPolicy: IfNotPresent
        name: docker-private-registry
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/registry
          name: image-store
        - mountPath: /certs
          name: certs
      volumes:
      - emptyDir: {} # THIS IS NOT PERSISTANT! WILL DELETE WITH POD!
        name: image-store
      - name: certs
        secret:
          secretName: registry-tls
          items:
          - key: tls.crt
            path: cert.crt
            mode: 256 # 0400 in decimal
          - key: tls.key
            path: cert.key
            mode: 256 # 0400 in decimal
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: docker-private-registry
  name: docker-private-registry
spec:
  ports:
  - nodePort: 30500
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: docker-private-registry
  type: NodePort
